--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,5 +1,5 @@
 <div class="banner">
-  <a href="http://software-carpentry.org" title="Software Carpentry">
-    <img alt="Software Carpentry banner" src="img/software-carpentry-banner.png" />
+  <a href="http://www.ecs.soton.ac.uk" title="Electronics and Computer Science">
+    <img alt="ECS banner" src="img/ecs-logo.png" />
   </a>
 </div>
